[package]
name = "candle"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-sys = { workspace = true }
esp-idf-hal = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
neopixel = { workspace = true }

[build-dependencies]
embuild = "0.30"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
